# rippleml

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.md  README.md  __init__.py  cli.py  manual_verify.py  pyproject.toml  pyproject.toml.bak  rippl_benchmarks.ipynb  setup.cfg  setup.py  verify_blocks.py  verify_tensorwav_namespace.py
.github/workflows/: ci.yml
TensorWAV/: __init__.py  cli.py
TensorWAV/datasets/: __init__.py  generators.py
TensorWAV/diagnostics/: __init__.py  energy.py  metrics.py  spectral.py
TensorWAV/examples/: predict_and_plot.py
TensorWAV/io/: __init__.py  checkpoint.py  export.py
TensorWAV/models/: __init__.py  fno.py  fourier_mlp.py  mlp.py  registry.py  siren.py
TensorWAV/operators/: __init__.py  grid_utils.py  operator_mode.py
TensorWAV/physics/: __init__.py  boundary.py  pde.py  residuals.py
TensorWAV/physics_blocks/: README.md  __init__.py  adaptivesampler.py  boundary_block.py  conservation_block.py  embedding.py  energy.py  gradient.py  hamiltonian.py  hybrid_stepper.py  laplacian.py  multiscale_ff.py  nn_operator_wrapper.py  oscillator.py  residual.py  spectral.py  spectral_conv.py  spectral_reg.py
TensorWAV/solvers/: __init__.py  fd_solver.py  spectral_solver.py
TensorWAV/training/: __init__.py  callbacks.py  engine.py
configs/: demo_blocks_playground.yaml  demo_operator_2d.yaml  demo_pinn_1d.yaml
core/: __init__.py  experiment.py  simulation.py  solver_registry.py  system.py
datasets/: __init__.py  generators.py
diagnostics/: __init__.py  energy.py  metrics.py  spectral.py
examples/: advdiff_1d.py  advection_1d.py  burgers.py  damped_wave.py  diffusion_1d.py  pinn_wave_1d.py  predict_and_plot.py  reaction_diffusion.py  wave_1d.py
io/: __init__.py  checkpoint.py  export.py
models/: __init__.py  fno.py  fourier_mlp.py  mlp.py  registry.py  siren.py
operators/: __init__.py  grid_utils.py  operator_mode.py
physics/: __init__.py  boundary.py  equation.py  operators.py  pde.py  residuals.py
physics_blocks/: README.md  __init__.py  adaptivesampler.py  boundary_block.py  energy.py  gradient.py  hamiltonian.py  laplacian.py  nn_operator_wrapper.py  oscillator.py  residual.py  spectral_conv.py
rippl/: __init__.py  api.py  cli.py  visualize.py
rippl/benchmarks/: allen_cahn_1d.py  csg_laplace_annulus.py  digital_twin_heat.py  eikonal_2d.py  (+11 more)
ripple/: LIMITATIONS.md
ripple.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scratch/: test_multi_pde.py
solvers/: __init__.py  fd_solver.py  spectral_solver.py
tests/: run_all.sh  test_advdiff.py  test_diagnostics.py  test_equation_sot.py  test_io.py  test_models.py  test_operator.py  test_package_import.py  test_physics.py  test_physics_blocks.py  test_solvers.py  test_source_nonlinear.py  test_training.py
training/: __init__.py  callbacks.py  engine.py
(+81 files in other folders)
