[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rippl"
version = "0.0.1"
description = "rippl: modular physics-ML framework for wave PDEs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Rippl Team"}
]
dependencies = [
    "torch>=2.0",
    "pyyaml",
    "numpy",
    "pandas>=1.5",
    "safetensors",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "onnx",
]
fractional = [
    "scipy>=1.10",
]
distributed = [
    "pytorch-lightning>=2.0"
]
visualization = [
    "matplotlib"
]
all = [
    "pytorch-lightning",
    "matplotlib",
    "huggingface_hub"
]

[project.scripts]
rippl = "rippl.cli:main"

[tool.setuptools]
packages = ["rippl", "rippl.core", "rippl.physics", "rippl.solvers", "rippl.training", "rippl.nn", "rippl.config", "rippl.operators", "rippl.io", "rippl.datasets", "rippl.diagnostics"]

[tool.pytest.ini_options]
testpaths = ["rippl/tests"]
python_files = "test_*.py"
