[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rippl"
version = "0.3.0"
description = "High-performance physics compiler and PINN engine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "pydantic"
]

[project.optional-dependencies]
# distributed: available in rippl-pro (lwly.io)

[project.scripts]
rippl = "rippl.cli:main"

[tool.setuptools]
packages = ["rippl", "rippl.core", "rippl.physics", "rippl.solvers", "rippl.training", "rippl.nn", "rippl.config", "rippl.operators", "rippl.io", "rippl.datasets", "rippl.diagnostics", "rippl.migrate", "rippl.sampling"]

[tool.pytest.ini_options]
testpaths = ["rippl/tests"]
python_files = "test_*.py"
